--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^4.1.13",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "zoz": "^0.0.0"
   }
 }
