--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.2.4",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "framer-motion": "^12.23.15",
     "next": "13.4.4",
     "postcss": "8.4.24",
     "react": "18.2.0",
