--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,13 +6,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test:e2e": "NODE_ENV=test playwright test"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.13",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
+    "dotenv": "^17.2.2",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
     "framer-motion": "^12.23.15",
@@ -23,5 +25,9 @@
     "tailwindcss": "^4.1.13",
     "typescript": "5.1.3",
     "zoz": "^0.0.0"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.55.0",
+    "playwright": "^1.55.0"
   }
 }
