--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,23 +10,23 @@
     "test:e2e": "NODE_ENV=test playwright test"
   },
   "dependencies": {
+    "dotenv": "^17.2.2",
+    "framer-motion": "^12.23.15",
+    "next": "13.4.4",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "zod": "^4.1.11"
+  },
+  "devDependencies": {
+    "tailwindcss": "^4.1.13",
     "@tailwindcss/postcss": "^4.1.13",
+    "postcss": "8.4.24",
+    "typescript": "5.1.3",
+    "eslint": "8.42.0",
+    "eslint-config-next": "13.4.4",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
-    "dotenv": "^17.2.2",
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.4",
-    "framer-motion": "^12.23.15",
-    "next": "13.4.4",
-    "postcss": "8.4.24",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "^4.1.13",
-    "typescript": "5.1.3",
-    "zoz": "^0.0.0"
-  },
-  "devDependencies": {
     "@playwright/test": "^1.55.0",
     "playwright": "^1.55.0"
   }
